<resources>
    <string name="app_name">Business Assistant</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">LOGIN</string>
    <string name="registrarse">Ir a Registro</string>

    <string name="digitar_nombre">Nombre</string>
    <string name="nombre">Digite nombre</string>
    <string name="digitar_correo">Correo electronico</string>
    <string name="digitar_contrasena">Contraseña</string>
    <string name="digitar_rcontrasena">Repetir contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>

    <string name="registrar">Registrarse</string>
    <string name="text_resultado">Resultado</string>
    <string name="tv_fecha">"Fecha de nacimiento:"</string>
    <string name="hint_fecha">dd/mm/yy</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="correo_texto"> Correo :</string>
    <string name="terminos"><![CDATA[Terminos & Condiciones]]></string>
    <string name="registrate">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventario">INVENTARIO</string>
    <string name="compras">COMPRAS Y ORDENES</string>
    <string name="clientes">CLIENTES</string>
    <string name="estadisticas">ESTADISTICAS Y REPORTES</string>
    <string name="tereas">TAREAS</string>
    <string name="nuevo_elemento">Nuevo Elemento</string>
    <string name="tipo_elemento">Tipo de Elemento</string>
    <string name="rb1_producto">Producto</string>
    <string name="rb2_servicio">Servivio</string>
    <string name="new_element">Nuevo Elemento</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="agregar_cliente">Agregar</string>
    <string name="celular_cliente">Celular</string>
    <string name="direccion_cliente">Dirección</string>
    <string name="title_activity_clientes">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cliente">MainActivity</string>
    <string name="crear">Crear</string>
    <string name="Lista">Lista</string>
    <string name="Delete">Delete</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Buscar">Buscar</string>
    <string name="navigation_create">home</string>
    <string name="buscar_cliente">BUSCAR</string>
    <string name="digite_nom_cliente">Digite nombre</string>
    <string name="eliminar_cliente">Eliminar</string>
    <string name="buscar">Buscar</string>
    <string name="nuevo_telefono">Digite el nuevo telefono</string>
    <string name="correo_actulizado">Digite el nuevo correo</string>
    <string name="nueva_direccion">Digite la nueva direccion</string>
    <string name="actualizar">actulizar</string>
    <string name="borrar">borrar</string>
    <string name="tv_nombre_del_elemento">Nombre del elemento*</string>
    <string name="name_elemento">Nombre del nuevo elemento</string>
    <string name="scannerQR">Scanner QR</string>
    <string name="tv_unit">Unidad*</string>
    <string name="unit">Ingrese las unidades</string>
    <string name="descripcion">Escriba aquí la descripcion del producto</string>
    <string name="description">Descripción*</string>
    <string name="precio">Precio*</string>
    <string name="dig_precio">Digite el precio</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="nombre_deudor">Nombre del Cliente</string>
    <string name="deuda">Cantidad</string>
    <string name="agregar_deudor">Agregar</string>

</resources>
