<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_crearcliente"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/crear" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/Buscar" />
    <item
        android:id="@+id/actualizar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/Actualizar" />

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_input_delete"
        android:title="@string/Delete" />

    <item
        android:id="@+id/lista"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/Lista" />

</menu>