<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActulizarClienteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre_deudor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_deudor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_buscard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_bt_circle"
        android:text="@string/buscar"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_deuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deuda" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_agregardeudor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_bt_circle"
        android:text="@string/agregar_deudor"
        android:textColor="@color/black" />

</LinearLayout>