<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_ElementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"

        android:padding="8dp"
        tools:context=".RegistroActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarTrackVertical="@color/chocolate"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nuevocliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/nuevo_elemento"
                    android:textAlignment="center"
                    android:textColor="@color/chocolate"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/tipo_elemento"
                    android:textColor="@color/business"
                    android:textSize="24sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_producto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="16dp"
                        android:checked="true"
                        android:fontFamily="@font/nunito_extralight"
                        android:text="@string/rb1_producto" />

                    <RadioButton
                        android:id="@+id/rb_servivio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:checked="false"
                        android:fontFamily="@font/nunito_extralight"
                        android:text="@string/rb2_servicio" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="229dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@android:drawable/ic_menu_camera" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</FrameLayout>